--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tsconfig/react-native": "^3.0.5",
     "@types/jest": "^29.5.13",
     "@types/react": "^18.3.9",
+    "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^18.3.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
