--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-maps": "^1.18.2",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2"
   },
