--- a/package.json
+++ b/package.json
@@ -4,23 +4,33 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
     "@apollo/client": "^3.11.8",
+    "@expo/vector-icons": "^14.0.4",
+    "@react-native-firebase/app": "^21.2.0",
+    "@react-native-firebase/messaging": "^21.2.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
+    "expo-dev-client": "^4.0.28",
     "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^11.0.1",
+    "install": "^0.13.0",
+    "npx": "^10.2.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-maps": "^1.18.2",
+    "react-native-reanimated": "^3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
