--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-firebase/app": "^21.2.0",
-    "@react-native-firebase/messaging": "^21.2.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
-    "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
-    "expo-dev-client": "^4.0.28",
     "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
@@ -32,9 +28,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^3.35.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-navigation": "^5.0.0",
-    "react-redux": "^9.1.2",
-    "redux-thunk": "^3.1.0"
+    "react-navigation": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
