--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   "dependencies": {
     "@apollo/client": "^3.11.8",
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-firebase/app": "^21.2.0",
-    "@react-native-firebase/messaging": "^21.2.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
     "expo-dev-client": "^4.0.28",
+    "expo-device": "^6.0.2",
     "expo-location": "^17.0.1",
+    "expo-notifications": "^0.28.19",
     "expo-status-bar": "~1.12.1",
     "firebase": "^11.0.1",
     "install": "^0.13.0",
