--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo-location": "^17.0.1",
     "expo-notifications": "^0.28.19",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^11.0.1",
+    "firebase": "10.6.0",
     "install": "^0.13.0",
     "npx": "^10.2.2",
     "react": "18.2.0",
